--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.3.3
 Werkzeug==3.0.1
 psycopg2-binary>=2.9.10
-python-telegram-bot==20.6
+python-telegram-bot==20.7  # Измени на 20.7
 requests==2.31.0
 python-dotenv==1.0.0
